--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 <body>
 <header></header>
 <main>
-    <div class="d-flex vh-100">
-        <div class="m-auto">
-            <h1><a href="apk/com.google.android.gsf.login_5.1-1743759-22_minAPI21(nodpi)_apkmirror.com.apk" download="">Android 5 Google Account Manager</a></h1>
-            <h1><a href="apk/Android_6_GAM_HardReset.info.apk" download="">Android 6 Google Account Manager</a></h1>
-            <h1><a href="apk/quickshortcutmaker-2-4-0.apk" download="">Quickshortcutmaker</a></h1>
-        </div>
+    <div class="container">
+        <div class="d-flex vh-100">
+            <div class="m-auto">
+                <h1><a href="apk/com.google.android.gsf.login_5.1-1743759-22_minAPI21(nodpi)_apkmirror.com.apk" download="">Android 5 Google Account Manager</a></h1>
+                <h1><a href="apk/Android_6_GAM_HardReset.info.apk" download="">Android 6 Google Account Manager</a></h1>
+                <h1><a href="apk/quickshortcutmaker-2-4-0.apk" download="">Quickshortcutmaker</a></h1>
+            </div>
 
+        </div>
     </div>
+
 </main>
 <footer></footer>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
