--- a/index.html
+++ b/index.html
@@ -8,16 +8,27 @@
     <title>Frp files</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css"></head>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+</head>
 <body>
 <header></header>
 <main>
     <div class="container">
         <div class="d-flex vh-100">
             <div class="m-auto">
-                <h1><a href="apk/com.google.android.gsf.login_5.1-1743759-22_minAPI21(nodpi)_apkmirror.com.apk" download="">Android 5 Google Account Manager</a></h1>
-                <h1><a href="apk/Android_6_GAM_HardReset.info.apk" download="">Android 6 Google Account Manager</a></h1>
-                <h1><a href="apk/quickshortcutmaker-2-4-0.apk" download="">Quickshortcutmaker</a></h1>
+                <div class="items-block">
+                    <h3><a href="apk/com.google.android.gsf.login_5.1-1743759-22_minAPI21(nodpi)_apkmirror.com.apk"
+                           download="">Android 5 Google Account Manager</a></h3>
+                </div>
+                <div class="items-block">
+                    <h3><a href="apk/Android_6_GAM_HardReset.info.apk" download="">Android 6 Google Account Manager</a>
+                    </h3>
+                </div>
+                <div class="items-block">
+                    <h3><a href="apk/quickshortcutmaker-2-4-0.apk" download="">Quickshortcutmaker</a></h3>
+                </div>
+
+
             </div>
 
         </div>
@@ -25,8 +36,14 @@
 
 </main>
 <footer></footer>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
 </html>
