--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
                 <div class="items-block">
                     <h3><a href="apk/quickshortcutmaker-2-4-0.apk" download="">Quickshortcutmaker</a></h3>
                 </div>
-
+                <div class="items-block">
+                    <h3><a href="apk/FRP%20Bypass.apk" download="">FRP bypass</a></h3>
+                </div>
+                <div class="items-block">
+                    <h3><a href="apk/frprom.apk" download="">FRPROM</a></h3>
+                </div>
+                <div class="items-block">
+                    <h3><a href="apk/apex-launcher-4-9-4.apk" download="">Apex launcher</a></h3>
+                </div>
 
             </div>
 
