--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Frp files</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
@@ -14,8 +14,14 @@
 <header></header>
 <main>
     <div class="container">
-        <div class="d-flex vh-100">
+        <div class="d-flex ">
+
             <div class="m-auto">
+                <div class="text-center text-white">
+                <h2 class="big-text">
+                    Файлы для снятия FRP блокировки
+                </h2>
+            </div>
                 <div class="items-block">
                     <h3><a href="apk/com.google.android.gsf.login_5.1-1743759-22_minAPI21(nodpi)_apkmirror.com.apk"
                            download="">Android 5 Google Account Manager</a></h3>
