--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Frp files</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<header></header>
+<header>
+
+</header>
 <main>
     <div class="container">
         <div class="d-flex ">
-
             <div class="m-auto">
                 <div class="text-center text-white">
                     <h2 class="big-text">
@@ -23,33 +24,161 @@
                     </h2>
                 </div>
                 <div class="items-block">
-                    <h3><a href="apk/com.google.android.gsf.login_5.1-1743759-22_minAPI21(nodpi)_apkmirror.com.apk"
-                           download="">Android 5 Google Account Manager</a></h3>
+                    <a href="apk/com.google.android.gsf.login_5.1-1743759-22_minAPI21(nodpi)_apkmirror.com.apk"
+                       download="">
+                        <h3>Android 5 Google Account Manager</h3>
+                    </a>
                 </div>
                 <div class="items-block">
-                    <h3><a href="apk/Android_6_GAM_HardReset.info.apk" download="">Android 6 Google Account Manager</a>
-                    </h3>
+                    <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                        <h3>Android 6 Google Account Manager </h3>
+                    </a>
                 </div>
                 <div class="items-block">
-                    <h3><a href="apk/quickshortcutmaker-2-4-0.apk" download="">Quickshortcutmaker</a></h3>
+                    <a href="apk/quickshortcutmaker-2-4-0.apk" download="">
+                        <h3>Quickshortcutmaker</h3>
+                    </a>
                 </div>
                 <div class="items-block">
-                    <h3><a href="apk/FRP%20Bypass.apk" download="">FRP bypass</a></h3>
+                    <a href="apk/FRP%20Bypass.apk" download="">
+                        <h3>FRP bypass</h3>
+                    </a>
                 </div>
                 <div class="items-block">
-                    <h3><a href="apk/frprom.apk" download="">FRPROM</a></h3>
+                    <a href="apk/FRPROM.apk" download="">
+                        <h3>FRPROM</h3>
+                    </a>
                 </div>
                 <div class="items-block">
-                    <h3><a href="apk/apex-launcher-4-9-4.apk" download="">Apex launcher</a></h3>
+                    <a href="apk/apex-launcher-4-9-4.apk" download="">
+                        <h3>Apex launcher</h3>
+                    </a>
                 </div>
-
+                <div class="items-block">
+                    <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                        <h3>Android 6 Google Account Manager </h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                        <h3>Android 6 Google Account Manager </h3>
+                    </a>
+                </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
+            </div> <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h3>Android 6 Google Account Manager </h3>
+                </a>
             </div>
-
+            </div>
         </div>
     </div>
-
 </main>
-<footer></footer>
+<footer>
+
+</footer>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
