--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     </h2>
                 </div>
                 <div class="items-block">
-                    <a href="apk/com.google.android.gsf.login_5.1-1743759-22_minAPI21(nodpi)_apkmirror.com.apk"
+                    <a href="apk/Android_5_Google_Account_Manager.apk"
                        download="">
                         <h3>Android 5 Google Account Manager</h3>
                     </a>
@@ -40,7 +40,7 @@
                     </a>
                 </div>
                 <div class="items-block">
-                    <a href="apk/FRP%20Bypass.apk" download="">
+                    <a href="apk/Bypass_FRP-1.0.apk" download="">
                         <h3>FRP bypass</h3>
                     </a>
                 </div>
@@ -55,123 +55,95 @@
                     </a>
                 </div>
                 <div class="items-block">
-                    <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                        <h3>Android 6 Google Account Manager </h3>
+                    <a href="apk/es-file-explorer-4-1-6.apk" download="">
+                        <h3>ES File explorer</h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/Bypass+FRP+2018.apk" download="">
+                        <h3> Bypass+FRP+2018</h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/Bypass+FRP+2018.apk" download="">
+                        <h3>Bypass+FRP+2018</h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/Bypass_FRP_Android_6_&_Android_8.apk" download="">
+                        <h3>Bypass_FRP_Android_6_&_Android_8</h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/com.afwsamples.testdpc_2.0.6-2006_minAPI21(nodpi).apk" download="">
+                        <h3>Testdpc_2.0.6 </h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/com.rootjunky.frpbypass-1.0.apk" download="">
+                        <h3>Frpbypass-1.0</h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/com.wakdev.wdnfc.4.4.apk" download="">
+                        <h3>wdnfc.4.4 </h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/FRP+Calculator7.apk" download="">
+                        <h3>FRP calculator Samsung </h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/FrpAllSamsung.apk" download="">
+                        <h3>FrpAllSamsung </h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/gam7.1.apk" download="">
+                        <h3>Android 7.1 Google Account Manager </h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/gam7.apk" download="">
+                        <h3>Android 7 Google Account Manager </h3>
                     </a>
                 </div>
                 <div class="items-block">
                     <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
                         <h3>Android 6 Google Account Manager </h3>
                     </a>
-                </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div> <div class="items-block">
-                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                    <h3>Android 6 Google Account Manager </h3>
-                </a>
-            </div>
+                </div>
+                <div class="items-block">
+                    <a href="apk/Google+account+manager+8.0.apk" download="">
+                        <h3>Android 8 Google Account Manager </h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/Menu+Button+(NO+ROOT)+v2.1.1(48)+FULL+(Rus).apk" download="">
+                        <h3>Menu button </h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/mohammad.adib.sidebar_4.4.0_paid-www.apkhere.com.apk" download="">
+                        <h3>Side bar</h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/moto%20g3%20x1550_collozgsm.apk" download="">
+                        <h3>Motorola FRP </h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/samsung%20bypass%20google%20verify.apk" download="">
+                        <h3>Samsung bypass google verify </h3>
+                    </a>
+                </div>
+                <div class="items-block">
+                    <a href="apk/Кнопка+меню+v2.1.2(49).apk" download="">
+                        <h3>Menu button v2 </h3>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
