--- a/index.html
+++ b/index.html
@@ -60,22 +60,17 @@
         </div>
         <div class="items-block">
             <a href="apk/Bypass+FRP+2018.apk" download="">
-                <h3> Bypass+FRP+2018</h3>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/Bypass+FRP+2018.apk" download="">
-                <h3>Bypass+FRP+2018</h3>
+                <h3> Bypass FRP 2018</h3>
             </a>
         </div>
         <div class="items-block">
             <a href="apk/Bypass_FRP_Android_6_&_Android_8.apk" download="">
-                <h3>Bypass_FRP_Android_6_&_Android_8</h3>
+                <h3>Bypass FRP Android 6 & Android 8</h3>
             </a>
         </div>
         <div class="items-block">
             <a href="apk/com.afwsamples.testdpc_2.0.6-2006_minAPI21(nodpi).apk" download="">
-                <h3>Testdpc_2.0.6 </h3>
+                <h3>Testdpc 2.0.6 </h3>
             </a>
         </div>
         <div class="items-block">
@@ -95,7 +90,7 @@
         </div>
         <div class="items-block">
             <a href="apk/FrpAllSamsung.apk" download="">
-                <h3>FrpAllSamsung </h3>
+                <h3>Frp All Samsung </h3>
             </a>
         </div>
         <div class="items-block">
