--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
                 <h4>Menu button v2 </h4>
             </a>
         </div>
+        <div class="items-block">
+            <a href="apk/com.android.contacts_12.1.6.3-263_minAPI23(arm64-v8a+armeabi+armeabi-v7a)(n.apk" download="">
+                <h4>Redmi Note 7 контакты с русским языком </h4>
+            </a>
+        </div>
     </div>
 
 </main>
