--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
                 <h4>Redmi Note 7 контакты с русским языком </h4>
             </a>
         </div>
+        <div class="items-block">
+            <a href="apk/Play Services Hidden Settings (1.0.2).apk" download="">
+                <h4>Play Services Hidden Settings </h4>
+            </a>
+        </div>
     </div>
 
 </main>
