--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 </head>
 <body>
 <header>
-
+    <div class="text-center text-white">
+        <h3 class="big-text">
+            Файлы для снятия FRP блокировки
+        </h3>
+    </div>
 </header>
 <main>
     <div class="container">
 
-        <div class="text-center text-white">
-            <h3 class="big-text">
-                Файлы для снятия FRP блокировки
-            </h3>
-        </div>
+        
         <div class="items-block">
             <a href="apk/Android_5_Google_Account_Manager.apk"
                download="">
@@ -161,7 +161,9 @@
 
 </main>
 <footer>
-
+    <div class="text-center text-white">
+        <a href="https://sotomobo.com">sotomobo.com</a>
+    </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
