--- a/index.html
+++ b/index.html
@@ -1,190 +1,195 @@
 <!doctype html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Frp files</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
- 
-    ym(67885864, "init", {
-         clickmap:true,
-         trackLinks:true,
-         accurateTrackBounce:true
-    });
- </script>
- <noscript><div><img src="https://mc.yandex.ru/watch/67885864" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
- <!-- /Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function(m, e, t, r, i, k, a) {
+            m[i] = m[i] || function() {
+                (m[i].a = m[i].a || []).push(arguments)
+            };
+            m[i].l = 1 * new Date();
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(67885864, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/67885864" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
 </head>
+
 <body>
-<header>
-    <div class="text-center text-white">
-        <h3 class="big-text">
-            Файлы для снятия FRP блокировки
-        </h3>
-    </div>
-</header>
-<main>
-    <div class="container">
+    <header>
+        <div class="text-center text-white">
+            <h3 class="big-text">
+                Файлы для снятия FRP блокировки
+            </h3>
+        </div>
+    </header>
+    <main>
+        <div class="container">
 
-        
-        <div class="items-block">
-            <a href="apk/Android_5_Google_Account_Manager.apk"
-               download="">
-                <h4>Android 5 Google Account Manager</h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
-                <h4>Android 6 Google Account Manager </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/quickshortcutmaker-2-4-0.apk" download="">
-                <h4>Quickshortcutmaker</h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/Bypass_FRP-1.0.apk" download="">
-                <h4>FRP bypass</h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/FRPROM.apk" download="">
-                <h4>FRPROM</h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/apex-launcher-4-9-4.apk" download="">
-                <h4>Apex launcher</h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/es-file-explorer-4-1-6.apk" download="">
-                <h4>ES File explorer</h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/Bypass+FRP+2018.apk" download="">
-                <h4> Bypass FRP 2018</h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/Bypass_FRP_Android_6_&_Android_8.apk" download="">
-                <h4>Bypass FRP Android 6 & Android 8</h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/com.afwsamples.testdpc_2.0.6-2006_minAPI21(nodpi).apk" download="">
-                <h4>Testdpc 2.0.6 </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/com.rootjunky.frpbypass-1.0.apk" download="">
-                <h4>Frpbypass-1.0</h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/com.wakdev.wdnfc.4.4.apk" download="">
-                <h4>wdnfc.4.4 </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/FRP+Calculator7.apk" download="">
-                <h4>FRP calculator Samsung </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/FrpAllSamsung.apk" download="">
-                <h4>Frp All Samsung </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/gam7.1.apk" download="">
-                <h4>Android 7.1 Google Account Manager </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/gam7.apk" download="">
-                <h4>Android 7 Google Account Manager </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/Google+account+manager+8.0.apk" download="">
-                <h4>Android 8 Google Account Manager </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/Menu+Button+(NO+ROOT)+v2.1.1(48)+FULL+(Rus).apk" download="">
-                <h4>Menu button </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/mohammad.adib.sidebar_4.4.0_paid-www.apkhere.com.apk" download="">
-                <h4>Side bar</h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/moto%20g3%20x1550_collozgsm.apk" download="">
-                <h4>Motorola FRP </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/samsung%20bypass%20google%20verify.apk" download="">
-                <h4>Samsung bypass google verify </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/Кнопка+меню+v2.1.2(49).apk" download="">
-                <h4>Menu button v2 </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/com.android.contacts_12.1.6.3-263_minAPI23(arm64-v8a+armeabi+armeabi-v7a)(n.apk" download="">
-                <h4>Redmi Note 7 контакты с русским языком </h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/Play Services Hidden Settings (1.0.2).apk" download="">
-                <h4>Play Services Hidden Settings </h4>
-            </a>
-        </div>
-        <h3 class="sector-title">
-            Youtube Vanced
-        </h3>
-        <div class="items-block">
-            <a href="apk/youtube/microg_YouTube_Vanced_0.2.4-105_16052019_2.apk" download="">
-                <h4> YouTube Vanced Services</h4>
-            </a>
-        </div>
-        <div class="items-block">
-            <a href="apk/youtube/YouTube_v12.49.55_minAPI16_Black.apk" download="">
-                <h4> YouTube Vanced</h4>
-            </a>
-        </div>
 
-</main>
-<footer>
-    <div class="text-center text-white">
-        <a href="https://sotomobo.com">sotomobo.com</a>
-    </div>
-</footer>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+            <div class="items-block">
+                <a href="apk/Android_5_Google_Account_Manager.apk" download="">
+                    <h4>Android 5 Google Account Manager</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
+                    <h4>Android 6 Google Account Manager </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/quickshortcutmaker-2-4-0.apk" download="">
+                    <h4>Quickshortcutmaker</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/Bypass_FRP-1.0.apk" download="">
+                    <h4>FRP bypass</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/FRPROM.apk" download="">
+                    <h4>FRPROM</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/apex-launcher-4-9-4.apk" download="">
+                    <h4>Apex launcher</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/es-file-explorer-4-1-6.apk" download="">
+                    <h4>ES File explorer</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/Bypass+FRP+2018.apk" download="">
+                    <h4> Bypass FRP 2018</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/Bypass_FRP_Android_6_&_Android_8.apk" download="">
+                    <h4>Bypass FRP Android 6 & Android 8</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/com.afwsamples.testdpc_2.0.6-2006_minAPI21(nodpi).apk" download="">
+                    <h4>Testdpc 2.0.6 </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/com.rootjunky.frpbypass-1.0.apk" download="">
+                    <h4>Frpbypass-1.0</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/com.wakdev.wdnfc.4.4.apk" download="">
+                    <h4>wdnfc.4.4 </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/FRP+Calculator7.apk" download="">
+                    <h4>FRP calculator Samsung </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/FrpAllSamsung.apk" download="">
+                    <h4>Frp All Samsung </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/gam7.1.apk" download="">
+                    <h4>Android 7.1 Google Account Manager </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/gam7.apk" download="">
+                    <h4>Android 7 Google Account Manager </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/Google+account+manager+8.0.apk" download="">
+                    <h4>Android 8 Google Account Manager </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/Menu+Button+(NO+ROOT)+v2.1.1(48)+FULL+(Rus).apk" download="">
+                    <h4>Menu button </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/mohammad.adib.sidebar_4.4.0_paid-www.apkhere.com.apk" download="">
+                    <h4>Side bar</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/moto%20g3%20x1550_collozgsm.apk" download="">
+                    <h4>Motorola FRP </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/samsung%20bypass%20google%20verify.apk" download="">
+                    <h4>Samsung bypass google verify </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/Кнопка+меню+v2.1.2(49).apk" download="">
+                    <h4>Menu button v2 </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/com.android.contacts_12.1.6.3-263_minAPI23(arm64-v8a+armeabi+armeabi-v7a)(n.apk" download="">
+                    <h4>Redmi Note 7 контакты с русским языком </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/Play Services Hidden Settings (1.0.2).apk" download="">
+                    <h4>Play Services Hidden Settings </h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/Navigation Bar Back Home Recent Button_v2.1.5_apkpure.com.apk" download="">
+                    <h4>NavMenu </h4>
+                </a>
+            </div>
+            <h3 class="sector-title">
+                Youtube Vanced
+            </h3>
+            <div class="items-block">
+                <a href="apk/youtube/microg_YouTube_Vanced_0.2.4-105_16052019_2.apk" download="">
+                    <h4> YouTube Vanced Services</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="apk/youtube/YouTube_v12.49.55_minAPI16_Black.apk" download="">
+                    <h4> YouTube Vanced</h4>
+                </a>
+            </div>
+
+    </main>
+    <footer>
+        <div class="text-center text-white">
+            <a href="https://sotomobo.com">sotomobo.com</a>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
+
 </html>
