--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
                 </a>
             </div>
             <div class="items-block">
+                <a href="intent://com.google.android.googlequicksearchbox/#Intent;scheme=android-app;end" download="">
+                    <h4>Open Google</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="intent://com.android.settings/#Intent;scheme=android-app;end" download="">
+                    <h4>Open Settings</h4>
+                </a>
+            </div>
+            <div class="items-block">
                 <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
                     <h4>Android 6 Google Account Manager </h4>
                 </a>
