--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                 </a>
             </div>
             <div class="items-block">
+                <a href="https://www.samsung.com/ru/apps/galaxy-store/#" download="">
+                    <h4>Open Galaxy Store</h4>
+                </a>
+            </div>
+            <div class="items-block">
                 <a href="intent://com.google.android.googlequicksearchbox/#Intent;scheme=android-app;end" download="">
                     <h4>Open Google</h4>
                 </a>
