play services link

--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@
                     <h4>NavMenu </h4>
                 </a>
             </div>
+            <div class="items-block">
+                <a href="https://play.google.com/store/apps/details?id=com.google.android.gms" download="">
+                    <h4>Play Services Link</h4>
+                </a>
+            </div>
             <h3 class="sector-title">
                 Youtube Vanced
             </h3>
