--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                 </a>
             </div>
             <div class="items-block">
+                <a href="intent://com.google.android.gms/#Intent;scheme=promote_smartlock_scheme;end">
+                    <h4>Set Pin</h4>
+                </a>
+            </div>
+            <div class="items-block">
                 <a href="apk/Android_6_GAM_HardReset.info.apk" download="">
                     <h4>Android 6 Google Account Manager </h4>
                 </a>
