--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </a>
             </div>
             <div class="items-block">
-                <a href="intent://com.miui.securitycore/#Intent;scheme=android-app;end" download="">
+                <a href="intent://com.miui.securitycore.ui.activity.PrivateSpaceMainActivity/#Intent;scheme=android-app;end" download="">
                     <h4>Open Xiaomi Second Space</h4>
                 </a>
             </div>
