--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
                 </a>
             </div>
             <div class="items-block">
+                <a href="intent://com.miui.securityspace/#Intent;scheme=android-app;end" download="">
+                    <h4>Open Xiaomi Second Space 2</h4>
+                </a>
+            </div>
+            <div class="items-block">
+                <a href="intent://com.miui.securitycore/com.miui.securityspace.ui.activity.PrivateSpaceMainActivity/#Intent;scheme=android-app;end" download="">
+                    <h4>Open Xiaomi Second Space 3</h4>
+                </a>
+            </div>
+            <div class="items-block">
                 <a href="intent://com.sec.android.app.myfiles/#Intent;scheme=android-app;end" download="">
                     <h4>Open Samsung My Files</h4>
                 </a>
