--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <h4>Open Youtube</h4>
                 </a>
             </div>
-            <div class="items-block">
+            <!-- <div class="items-block">
                 <a href="intent://com.miui.securityspace.ui.activity.PrivateSpaceMainActivity/#Intent;scheme=android-app;end" download="">
                     <h4>Open Xiaomi Second Space</h4>
                 </a>
@@ -81,7 +81,7 @@
                 <a href="intent://com.miui.securitycore/com.miui.securityspace.ui.activity.PrivateSpaceMainActivity/#Intent;scheme=android-app;end" download="">
                     <h4>Open Xiaomi Second Space 3</h4>
                 </a>
-            </div>
+            </div> -->
             <div class="items-block">
                 <a href="intent://com.sec.android.app.myfiles/#Intent;scheme=android-app;end" download="">
                     <h4>Open Samsung My Files</h4>
