--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                     <h4>Open Xiaomi Second Space 3</h4>
                 </a>
             </div> -->
-            <div class="items-block">
+            <!-- <div class="items-block">
                 <a href="intent://com.miui.securitycore.SecurityCoreApplication/#Intent;scheme=android-app;end" download="">
-                    <h4>Open Xiaomi Second Space 3</h4>
+                    <h4>Open Xiaomi Second Space 4</h4>
                 </a>
-            </div> -->
+            </div> --> -->
             <div class="items-block">
                 <a href="intent://com.sec.android.app.myfiles/#Intent;scheme=android-app;end" download="">
                     <h4>Open Samsung My Files</h4>
