--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <body>
     <header>
         <div class="text-center text-white">
-            <h3 class="big-text">
+            <!-- <h3 class="big-text">
                 Файлы для снятия FRP блокировки
-            </h3>
+            </h3> -->
         </div>
     </header>
     <main>
@@ -86,7 +86,7 @@
                 <a href="intent://com.miui.securitycore.SecurityCoreApplication/#Intent;scheme=android-app;end" download="">
                     <h4>Open Xiaomi Second Space 4</h4>
                 </a>
-            </div> --> -->
+            </div> --> 
             <div class="items-block">
                 <a href="intent://com.sec.android.app.myfiles/#Intent;scheme=android-app;end" download="">
                     <h4>Open Samsung My Files</h4>
@@ -205,11 +205,11 @@
                     <h4>Samsung bypass google verify </h4>
                 </a>
             </div> -->
-            <div class="items-block">
+            <!-- <div class="items-block">
                 <a href="apk/Кнопка+меню+v2.1.2(49).apk" download="">
                     <h4>Menu button v2 </h4>
                 </a>
-            </div>
+            </div> -->
             <!-- <div class="items-block">
                 <a href="apk/com.android.contacts_12.1.6.3-263_minAPI23(arm64-v8a+armeabi+armeabi-v7a)(n.apk" download="">
                     <h4>Redmi Note 7 контакты с русским языком </h4>
@@ -220,11 +220,11 @@
                     <h4>Play Services Hidden Settings </h4>
                 </a>
             </div> -->
-            <div class="items-block">
+            <!-- <div class="items-block">
                 <a href="apk/Navigation Bar Back Home Recent Button_v2.1.5_apkpure.com.apk" download="">
                     <h4>NavMenu </h4>
                 </a>
-            </div>
+            </div> -->
             <div class="items-block">
                 <a href="https://play.google.com/store/apps/details?id=com.google.android.gms" download="">
                     <h4>Play Services Link</h4>
