--- a/index.html
+++ b/index.html
@@ -5,24 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Frp files</title>
+    <title>Frp tools</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header>
         <div class="text-center text-white">
-            <!-- <h3 class="big-text">
-                Файлы для снятия FRP блокировки
-            </h3> -->
+            Nursultan Sharsheev
         </div>
     </header>
     <main>
         <div class="container">
-
-
-        
         <div class=" row">
             <div class=" col-md-6">
                 <div class="items-block">
