--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="text-center text-white">
+        <div class="text-center">
             Nursultan Sharsheev
         </div>
     </header>
