--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Frp tools</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <div class="text-center">
-            Nursultan Sharsheev
+            <p>
+                Nursultan Sharsheev
+            </p>
         </div>
     </header>
     <main>
