--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
 
 <body>
     <header>
-        <div class="text-center">
-            <p>
-                Nursultan Sharsheev
-            </p>
-        </div>
+        
     </header>
     <main>
-        <div class="container">
+        <div class="container pt-3">
         <div class=" row">
             <div class=" col-md-6">
                 <div class="items-block">
@@ -103,13 +99,6 @@
                 <div class="items-block">
                 <a href="apk/FRPROM.apk" download="">
                     <h4>FRPROM</h4>
-                </a>
-                </div>
-            </div>
-            <div class=" col-md-6">
-                <div class="items-block">
-                <a href="apk/apex-launcher-4-9-4.apk" download="">
-                    <h4>Apex launcher</h4>
                 </a>
                 </div>
             </div>
